# euclid_configuration_node

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
launch/: scenario_manager.launch  static_transform.launch
msg/: NodeDetails.msg  NodeLaunchParam.msg  NodeStatus.msg  NodesStatus.msg  PackageStatus.msg  Param.msg  Scenario.msg
scripts/: CsConfigModule.py  CsConfigurationItem.py  CsRegisterNewNode.py  CsScenarioManager.py  CsUtils.py  __init__.py
srv/: CreateScenario.srv  DeactivateNodes.srv  DeleteNode.srv  EditScenario.srv  ExportScenarios.srv  FindLaunchFiles.srv  FindRunningNodes.srv  GetDefaultScenario.srv  GetLaunchFilePath.srv  GetNodesDetails.srv  GetParams.srv  GetRobots.srv  GetScenarios.srv  GetSystemNodes.srv  GetXMLData.srv  ImportScenarios.srv  RegisterNewNode.srv  ReloadEuclidNode.srv  RemoveScenario.srv  RemoveScenarios.srv  SetParam.srv  SetROSMasterURI.srv  StaticTransform.srv  UpdateXMLData.srv
test/: killSystem.bash  run_test.py  run_tests.launch  test_cases.py  test_config_1.xml  test_config_2.xml  test_config_3.xml  test_config_4.xml  test_config_bad.xml  test_config_t.xml
